2017-07-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/common.py (supcolorbar):

	Fixed reference in docstring.

2017-07-27  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset._add_gran_to_data):

	- Don't cont.load() when empty, otherwise we trigger
	https://github.com/pydata/xarray/issues/1329

	* typhon/datasets/tovs.py(HIRS._read):

	- Catch the situation where time has duplicates but scanline number
	does not

	* typhon/utils/__unit__.py(concat_each_time_coordinate):

	- Allow for empty time coordinates and skip those dimensions,
	otherwise we trigger https://github.com/pydata/xarray/issues/1329

2017-07-25  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/atmosphere.py(relative_humidity):

	- Fix typo in docstring

	* typhon/datasets/dataset.py(Dataset._add_gran_to_data):

	- For slices, ensure we're doing a<=x<b, i.e. include the start but
	not the end, such that asking for [a, b], then [b, c] will never
	include a duplicate point, which can happen if there is a measurement
	exactly at b.

2017-07-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/arts/griddedfield.py(GriddedField.to_xarray):

	- Added method to convert to xarray DataArray.

	* typhon/arts/tests/test_griddedfield.py:

	- Added method to test this new functionality.  Unfortunately, I'm not
	sure how to run the test suite, as 'python3.6 setup.py test' ran 0
	tests.

2017-07-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(DatasetDeque.move):

	- Make sure to move edges etc. even when reading fails.

2017-07-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset._ensure_large_enough) (Dataset._add_pseudo_fields)
	(Dataset._read_ndarray):

	- Don't convert regular ndarrays into masked arrays

	(DatasetDeque.move):
	
	- Base new edges on self.edges as well as self.data["time"], otherwise
	we may be consistently off forever if we start off with partly
	unreadable data
